# competition_meow_team

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: vision.launch.py
results/armor_result/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
results/arrow_result/: TEAM6_results1.json.sha256
results/circle_results/: TEAM6_results1.json
results/rect_result/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
results/sphere_result/: TEAMENAME_results.json  TEAMENAME_results.json.sha256
src/: armor_vision_node.cpp  sphere_vision_node.cpp  tanglegal.cpp
